--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,11 @@
             <artifactId>spring-aspects</artifactId>
             <version>4.1.6.RELEASE</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-dao</artifactId>
+            <version>2.0.8</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
